# meta-prompt-agent

./: .gitignore  .pdm-python  MIT License  README.md  agent_logic.py  app.py  fix_model_selection.py  frontend_refactoring_summary.md  package-lock.json  package.json  prompt_templates.py  pyproject.toml  requirements.txt  run_hidden.vbs  test_model_selection_fixed.py  user_feedback.json
docs/: api_usage.md  architecture.md
frontend/: App.css  App.tsx  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/common/Button/: index.tsx  styles.css
frontend/src/components/common/ToggleSwitch/: index.tsx  styles.css
frontend/src/components/icons/: index.tsx
frontend/src/components/layout/: styles.css
frontend/src/pages/PromptInput/: index.tsx  styles.css
frontend/src/pages/PromptResult/: index.tsx  styles.css
frontend/src/pages/StepsView/: index.tsx  styles.css
frontend/src/services/: api.ts  promptService.ts  systemService.ts
frontend/src/types/: prompt.ts  system.ts
frontend/src/utils/: constants.ts  diffUtils.ts  evaluationUtils.ts
scripts/: api_cli.py
src/meta_prompt_agent/api/: client.py  docs.py  main.py
src/meta_prompt_agent/app/: main_ui.py
src/meta_prompt_agent/config/: logging_config.py  settings.py
src/meta_prompt_agent/core/: agent.py  session_manager.py
src/meta_prompt_agent/core/llm/: README.md  __init__.py  base.py  factory.py
src/meta_prompt_agent/prompts/: templates.py
tests/: test_model_selection.py
tests/api/: __init__.py  test_api_client.py  test_api_endpoints.py  test_main_api.py
tests/unit/: test_agent.py  test_llm_clients.py
(+18 files in other folders)
