[project]
name = "meta_prompt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zhou Liu", email = "liuz24@m.fudan.edu.cn"},
]
dependencies = [
    "requests>=2.32.3",
    "streamlit>=1.22.0",
    "altair<5.0.0,>=4.2.2",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
